# type-broker-sarimfork

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gui.py  main.py  pyproject.toml
Dependencies_Scripts/: install_linux_dependencies.sh  install_windows_dependencies.bat
extractor/: main.py
gui/: gui.py
src/: capture.py  config.py  gui.py  main (1).py  main.py  mainp.py  ocr_fetch.py  typer_text.py
typer/: type.py
