[project]
name = "type-broker"
version = "0.1.0"
description = "Don't Cheat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "textblob>=0.19.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true